e_metrobus/static/sass/_landing_page.scss
/* ... */
@keyframes a-lp-btn {
  0% {
    transform: translateY(-150px);
    opacity: 0;
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.landpage__bus {
  margin-top: 2rem;
  text-align: center;
  img {
    height: 2.5rem;
  }
}

@media only screen and (max-height: 666px) {
  .landpage__bus {
    margin-top: 1rem;
    text-align: center;
    img {
      height: 1.5rem;
    }
  }
}

.landpage {
  height: 100%;
  margin: 1.5rem 1rem 0;

  @media only screen and (min-height: 667px) {
    margin: 15% 1rem 0;
  }

  @media only screen and (min-height: 800px) {
    margin: 20% 1rem 0;
  }

    &__logo {
    margin: .25rem 0;

    @media only screen and (max-height: 600px) {
      margin: .25rem 0;
    }
    @media only screen and (max-height: 640px) {
      margin-bottom: .35rem;
    }
    &--bvg {
      animation: fadein 2s;
      animation-delay: 2.15s;
      animation-fill-mode: backwards;
      img {
        max-width: 2.75rem;
      }
    }
    &--tu {
      animation: fadein 2s;
      animation-delay: 2.3s;
      animation-fill-mode: backwards;
      img {
        margin-top: 0.3rem;
        max-width: 3.25rem;
      }
    }
    &--rli {
      animation: fadein 2s;
      animation-delay: 2.45s;
      animation-fill-mode: backwards;
      img {
        margin-top: 0.5rem;
        max-width: 3.25rem;
      }
    }
    &--bmwi {
      animation: fadein 2s;
      animation-delay: 2.45s;
      animation-fill-mode: backwards;
      img {
        width: 100%;
        max-width: 22rem;
      }
    }
  }

  &__img {
    padding: 0 4.5rem 8rem;
    img {
      width: 100%;
    }
  }

  &__subtext {
    padding: 0;
    p {
      text-align: center;
      font-size: 1.5rem;
      font-weight: 700;
      padding-bottom: .5rem;
    }
    p span {
      display: inline;
    }
    .highlight {
      white-space: nowrap;
      font-weight: 700;
      font-size: 1.5rem;
      letter-spacing: .05rem;
      color: $white;
      background-color: $secondary-color;
      padding: .75rem;
      line-height: 2.75rem;
    }
    .underline {
      border-bottom: 2px solid $secondary-color;
      white-space: nowrap;
      font-weight: 700;
      font-size: 1.5rem;
    }
  }

  &__arrows {
    height: 4rem;
    background-image: url(../images/arrows_down_black.svg);
    background-size: auto 4rem;
    background-repeat: no-repeat;
    background-position: center;
  }

  .a-lp-btn {
    animation: a-lp-btn .75s $cubic-bezier-ease-out 1s both;
  }

  &__button {
    .frame {
      background-color: $primary-color-1;
      padding: 2rem 1rem;
      border-radius: 1rem;
    }

    &-text span {
      font-size: 1.5rem;
      font-weight: bold;
      line-height: 1.85rem;
    }
    &-btn {
      margin: 1rem 0;

      button {
        margin-bottom: 0;
      }
    }
  }

  &__language {
    display: flex;
    flex-direction: row;
    justify-content: center;
    &--switch {
      animation: fadein 1.5s;
      animation-fill-mode: backwards;
      animation-delay: 2.6s;
      a {
        display: flex;
        flex-direction: row;
        padding-top: .5rem;
        padding-bottom: .5rem;
      }
      img {
        display: inline-block;
        height: 1.25rem;
        margin: 0 0.5rem 0 0;
      }
      p {
        display: inline-block;
        vertical-align: middle;
        color: $secondary-color;
        font-size: .875rem;
        letter-spacing: .01rem;
        white-space: nowrap;
        margin-bottom: 0;
      }
    }
  }
  &__text {
    font-size: .64rem;
    text-align: left;
    padding: 0 .5rem;
    color: $gray-4;
    animation: fadein 2s;
    animation-delay: 2s;
    animation-fill-mode: backwards;

    p {
      text-align: center;
    }

    @media (orientation: landscape) and (max-width: 1023px) {
      padding-top: 2rem;
    }
  }
  &__bottom {
    padding: 0 .5rem 0;
    position: fixed;
    bottom: 0;

    @media (orientation: landscape) and (max-width: 1023px) {
      position: relative;
    }
  }
}

.desktop.desktop-device {
  position: relative;
  padding: 1rem 0;
  height: 24rem;
  margin-bottom: 0;
  .desktop-device__color {
    z-index: 1;
    position: absolute;
    height: 50%;
    width: 100%;
  }
  .desktop-device__color--1 {
    top: 0;
    background-color: $primary-color-1;
  }
  .desktop-device__color--2 {
    bottom: 0;
    background-color: $white;
  }
  .desktop-device__img {
    z-index: 5;
    img {
      height: 22rem;
    }
  }
}

.desktop.desktop-features {
  padding-top: 2rem;
  margin-bottom: 9rem;
  @media only screen and (min-width: 1024px) {
    margin-bottom: 13rem;
  }
  .desktop-features__item {
    padding: 0 1rem;
  }
  .icon {
    height: 5rem;
    width: 5rem;
    margin: 0 auto;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    &--1 {
      background-image: url(../images/icons/i_co2_black_footer.svg);
    }
    &--2 {
      background-image: url(../images/icons/i_quiz_black.svg);
    }
    &--3 {
      background-image: url(../images/icons/i_flash_black.svg);
    }
  }
  h2 {
    padding-top: 2rem;
    font-weight: 700;
    font-size: 1.25rem;
    text-align: center;
  }
  .text {
    text-align: center;
  }
}

// CSS for desktop LP and mobile SUMMARY
$desktop-padding-large: 9rem;
$desktop-padding-medium: 4.5rem;
$desktop-padding-small: 2.25rem;
$desktop-padding-xsmall: 1.125rem;
$desktop-padding-xxsmall: .6rem;

@mixin yellow-card($padding) {
  background-color: $primary-color-1;
  border-radius: $border-radius;
  padding: $padding;
  text-align: center;
}

@mixin desktop-h2 {
  text-align: center;
  font-size: 1.25rem;
  font-weight: 700;
  @media only screen and (min-width: 1024px) {
    font-size: 1.55rem;
  }
}

@mixin desktop-imgs {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.grid-x.grid-width--large {
  width: 100%;
  max-width: 75rem;
  padding-right: $desktop-padding-xsmall;
  padding-left: $desktop-padding-xsmall;
}
/* ... */

